# ODYM

./: .gitignore  Requirements.txt  pyproject.toml
docs/: ODYM Example and Tutorial No. 1. System with two processes, two parameters, one material.ipynb  ODYM Example and Tutorial No. 2. Alloying elements in recycling.ipynb  ODYM Example and Tutorial No. 3. Dynamic Stock modelling.ipynb
odym/: ODYM_Classes.py  ODYM_Functions.py  __init__.py
odym/modules/: ODYM_Functions.py  dynamic_stock_model.py
